<resources>
    <string name="app_name">Mobile Firebase</string>
    <string name="boas_vindas">Bem-vindo ao Mobile Firebase!</string>
    <string name="titulo_inicio">Início</string>
    <string name="descricao_inicio">Você entrou na sua conta. Que bom ter você aqui!</string>
    <string name="minha_conta">Minha conta</string>
    <string name="sessao_ativa">Sessão ativa</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="entre_conta">Entre na sua conta</string>
    <string name="sair_conta">Sair da conta</string>
    <string name="aguarde_acesso">Aguarde, verificando sua conta</string>
    <string name="email_invalido">Informe um e-mail válido.</string>
    <string name="senha_obrigatoria">Digite sua senha.</string>
    <string name="login_invalido">Não foi possível entrar. Confira seu e-mail e senha e tente novamente.</string>
    <string name="erro_conexao">Sem conexão com o serviço. Verifique sua internet e tente novamente.</string>
    <string name="muitas_tentativas">Muitas tentativas. Aguarde um pouco e tente novamente.</string>
    <string name="acesso_indisponivel">O acesso ainda não está disponível nesta versão.</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ja_tenho_conta">Já tenho uma conta</string>
    <string name="senha_curta">Use uma senha com pelo menos 6 caracteres.</string>
    <string name="senhas_diferentes">As senhas não são iguais.</string>
    <string name="senha_fraca">A senha não atende aos requisitos. Use uma senha mais forte.</string>
    <string name="conta_criada">Conta criada com sucesso!</string>
    <string name="erro_cadastro">Não foi possível criar a conta. Confira os dados ou tente entrar caso já tenha cadastro.</string>
</resources>
